# CD_lab_EL

./: .gitignore  README.md  audit_report.md  requirements.txt  tasks.md  test_preview.md
src/: analyzer.py  builder.py  main.py  orchestrator.py  scout.py
testbed/: CMakeLists.txt  main.cpp
tests/: test_analyzer.py  test_orchestrator.py  test_scout.py
